cabal-version:      2.4
name:               aoc2024
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             AntanasKal
maintainer:         a.kalkauskas@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable day1
    main-is:          Day1.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable day2
    main-is:          Day2.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable day3
    main-is:          Day3.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16.0.0
                    , parsec
                    , split
    hs-source-dirs:   src
    default-language: Haskell2010


executable day4
    main-is:          Day4.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16.0.0
                    , parsec
                    , split
    hs-source-dirs:   src
    default-language: Haskell2010

executable day5
    main-is:          Day5.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16.0.0
                    , parsec
                    , split
    hs-source-dirs:   src
    default-language: Haskell2010


executable day6
    main-is:          Day6.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16.0.0
                    , parsec
                    , split
                    , containers
    hs-source-dirs:   src
    default-language: Haskell2010

executable day7
    main-is:          Day7.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16.0.0
                    , parsec
                    , split
                    , containers
    hs-source-dirs:   src
    default-language: Haskell2010

executable day8
    main-is:          Day8.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16.0.0
                    , parsec
                    , split
                    , containers
    hs-source-dirs:   src
    default-language: Haskell2010

executable day9
    main-is:          Day9.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16.0.0
                    , parsec
                    , split
                    , containers
    hs-source-dirs:   src
    default-language: Haskell2010

executable day10
    main-is:          Day10.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16.0.0
                    , parsec
                    , split
                    , containers
    hs-source-dirs:   src
    default-language: Haskell2010

executable day11
    main-is:          Day11.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16.0.0
                    , parsec
                    , split
                    , containers
                    , hashtables
                    , mtl
    hs-source-dirs:   src
    default-language: Haskell2010


executable day12
    main-is:          Day12.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16.0.0
                    , parsec
                    , split
                    , containers
                    , hashtables
                    , mtl
                    , equivalence
                    , STMonadTrans
                    , union-find-array
                    -- , union-find >= 0.2
    hs-source-dirs:   src
    default-language: Haskell2010
